# portainer-tui

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  portainer_tui.tcss  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
portainer_tui/: __init__.py  __main__.py  config.py
portainer_tui/api/: __init__.py  client.py
portainer_tui/models/: __init__.py  container.py  endpoint.py  image.py  network.py  stack.py  volume.py
portainer_tui/ui/: app.py
portainer_tui/ui/screens/: _help.py  container_editor.py  containers.py  create_stack.py  endpoints.py  images.py  networks.py  stack_editor.py  stacks.py  volumes.py
portainer_tui/ui/widgets/: confirm.py  detail.py  logs.py  statusbar.py  sysmon.py
tests/: test_config.py  test_models.py
